Fix footer PHP tag enclosing bug causing broken layouts

--- a/src/input.css
+++ b/src/input.css
@@ -28,6 +28,7 @@
   }
 
   a {
+    color: inherit;
     @apply underline-offset-4 transition-colors;
   }
 
